--- a/portfolio-nextjs/package.json
+++ b/portfolio-nextjs/package.json
@@ -13,7 +13,8 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "framer-motion": "^11.0.0",
-    "lucide-react": "^0.344.0"
+    "lucide-react": "^0.344.0",
+    "react-intersection-observer": "^9.5.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
