--- a/portfolio-nextjs/package.json
+++ b/portfolio-nextjs/package.json
@@ -14,9 +14,7 @@
     "react-dom": "^18.3.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
-    "react-intersection-observer": "^9.5.3",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1"
+    "react-intersection-observer": "^9.5.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
