--- a/portfolio-nextjs/package.json
+++ b/portfolio-nextjs/package.json
@@ -25,11 +25,6 @@
     "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0",
-    "@next/swc-linux-x64-gnu": "^14.2.0",
-    "@next/swc-linux-x64-musl": "^14.2.0",
-    "@next/swc-win32-x64-msvc": "^14.2.0",
-    "@next/swc-darwin-x64": "^14.2.0",
-    "@next/swc-darwin-arm64": "^14.2.0"
+    "eslint-config-next": "^14.2.0"
   }
 }
