--- a/portfolio-nextjs/package.json
+++ b/portfolio-nextjs/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export",
+    "deploy": "npm run build && touch dist/.nojekyll"
   },
   "dependencies": {
     "next": "^14.2.0",
